// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MOB-005: écran feedback — 5 étoiles + champ commentaire rendus avec tokens SIGFA (RNTL snapshot × FR/EN) MOB-005: FeedbackScreen — rendu avec 5 étoiles et champ commentaire en français: FeedbackScreen-fr 1`] = `
<View
  style={
    {
      "backgroundColor": "#FBF8F3",
      "flex": 1,
      "padding": 24,
    }
  }
  testID="feedback-form"
>
  <Text
    style={
      {
        "color": "#1A130C",
        "fontSize": 16,
        "fontWeight": "700",
        "marginBottom": 12,
        "marginTop": 16,
      }
    }
  >
    Note
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 16,
      }
    }
    testID="feedback-stars"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-1"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-2"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-3"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-4"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-5"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#1A130C",
        "fontSize": 16,
        "fontWeight": "700",
        "marginBottom": 12,
        "marginTop": 16,
      }
    }
  >
    Un mot à ajouter ? (facultatif)
  </Text>
  <TextInput
    maxLength={500}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Votre commentaire..."
    placeholderTextColor="#A99C8B"
    style={
      {
        "backgroundColor": "#F4EEE4",
        "borderColor": "#ECE3D6",
        "borderRadius": 12,
        "borderWidth": 1,
        "color": "#1A130C",
        "fontSize": 16,
        "marginBottom": 24,
        "minHeight": 120,
        "padding": 16,
        "textAlignVertical": "top",
      }
    }
    testID="feedback-comment"
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#C25A16",
        "borderRadius": 12,
        "elevation": 6,
        "justifyContent": "center",
        "minHeight": 52,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
        "shadowColor": "#C25A16",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 20,
      }
    }
    testID="feedback-submit"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "fontWeight": "700",
        }
      }
    >
      Donner mon avis
    </Text>
  </View>
</View>
`;

exports[`MOB-005: écran feedback — 5 étoiles + champ commentaire rendus avec tokens SIGFA (RNTL snapshot × FR/EN) MOB-005: FeedbackScreen — snapshot en anglais: FeedbackScreen-en 1`] = `
<View
  style={
    {
      "backgroundColor": "#FBF8F3",
      "flex": 1,
      "padding": 24,
    }
  }
  testID="feedback-form"
>
  <Text
    style={
      {
        "color": "#1A130C",
        "fontSize": 16,
        "fontWeight": "700",
        "marginBottom": 12,
        "marginTop": 16,
      }
    }
  >
    Rating
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 16,
      }
    }
    testID="feedback-stars"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-1"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-2"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-3"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-4"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 52,
          "minWidth": 52,
          "opacity": 1,
        }
      }
      testID="feedback-star-5"
    >
      <Text
        style={
          [
            {
              "color": "#A99C8B",
              "fontSize": 40,
            },
            false,
          ]
        }
      >
        ☆
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "#1A130C",
        "fontSize": 16,
        "fontWeight": "700",
        "marginBottom": 12,
        "marginTop": 16,
      }
    }
  >
    Anything to add? (optional)
  </Text>
  <TextInput
    maxLength={500}
    multiline={true}
    onChangeText={[Function]}
    placeholder="Your comment..."
    placeholderTextColor="#A99C8B"
    style={
      {
        "backgroundColor": "#F4EEE4",
        "borderColor": "#ECE3D6",
        "borderRadius": 12,
        "borderWidth": 1,
        "color": "#1A130C",
        "fontSize": 16,
        "marginBottom": 24,
        "minHeight": 120,
        "padding": 16,
        "textAlignVertical": "top",
      }
    }
    testID="feedback-comment"
    value=""
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#C25A16",
        "borderRadius": 12,
        "elevation": 6,
        "justifyContent": "center",
        "minHeight": 52,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
        "shadowColor": "#C25A16",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 20,
      }
    }
    testID="feedback-submit"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "fontWeight": "700",
        }
      }
    >
      Give feedback
    </Text>
  </View>
</View>
`;
